@@ -24,24 +24,12 @@ EBUILD vmware-modules-271.3.ebuild 2326 SHA256 9d50fba55474113a5b185f3d0661065ff
 EBUILD vmware-modules-279.1-r1.ebuild 2830 SHA256 7a39118cc3c5ecdf4f45fc101d64a73a4f5f1747484337276e0bcb2f47537d5d SHA512 a42130e592f38696df8d8f02eb40b230ddaad5833cc95c19535cdf7417016d4b8d4870f88c0bc65f8b430c0498d8c771412439d3f6bbcfd21147f6858eb4c0f7 WHIRLPOOL 39b0e5e39cc3534b4bb1f1295b26c03fc4436458bd7d21cae94e83e57ea3ce822777eef00319ebae935f87ba6529ebf4cae8a91cb6ccf2a4b389bda320afcc61
 EBUILD vmware-modules-279.2.ebuild 2827 SHA256 407d97fb75dcde69bfb495722c2fea0e052ac19d294bf88f3b4acd767c342cb1 SHA512 20bad58f294c1ee1487958024d0ebd6628df9f2d30577d9e2a5373a28de1514527ab9e1cac0c305511966348613baa20c044a8e4a08e0830bc6cdd7dcff9d58f WHIRLPOOL 8fdb2e052b079e286476f5c3af7d2d13f295a37fcab861f5734161fa61a9e86dd9c73489511cc55c75cccf0a92d6da8407e9ea5299637b05b809ff2c1ea89b09
 EBUILD vmware-modules-279.3.ebuild 2827 SHA256 d52dec327299c118722e6cace96192e8096033c41953a8efae4fb7b135b533a1 SHA512 5f44c361f9e30f1ebf6c9851fb652b18da938209f7b83ddc538be051c6550b5aee0776c624a79434fa7b59705d6644564dfb8720eb362e99b6d34f0c895c1e8d WHIRLPOOL 58c392f01b0a5cf4ae5e3debdea95299ae51e3e831b8e9689066cc335b4cc8a10f2bd42ff1ea87d5179b42d63f0c39d955e3ad7c52e1a6676c074264e2ce89b1
-MISC ChangeLog 27162 SHA256 ee1f39f2bdcaf57dc6023693c7e9cb4c70c16e8a0511ccedaad7d21eefa505e2 SHA512 39fe5dbd48cb02103a04c415d4f487a861b5a132fc7031ed1fa9c510edb8ca589adb61f8c2dbe9660b4674425c9679ad29933009ac6a0f018ed2652e2ecfc051 WHIRLPOOL cc46531a5df9f8088d45fd1c1571951047a8fe53bdffa815414999635c1bb51dabde16ac1faf1a02af89bad222311bb110f21bb9570dc5b7c8abea61847f8b18
-MISC metadata.xml 626 SHA256 df85fe94586e898742dda5a30bf95be1c66bded72b9b679b4bda9fb3113bb94a SHA512 5c16977fa1e95f123891324b24d20161bfbfa5f4a38371374290e635bba33cbbc933761f44b826503c37e4bb2295c4026356eddc6aef091c07dc17f773f538ec WHIRLPOOL f83d377fa941fbcfe25dfc83ad276f55782c1e9bdff6dc7ae147be667d7129ae55dae6c19c18544dc27123977d3aa6273f185b4cced70ab841e87a04a4fcae82
+MISC ChangeLog 27252 SHA256 2c987c712dcc1969d5edb0a1f570c73f993f06066e2b57fb6c97d5c11c252ad8 SHA512 c275541dec97b6f348d1bcaa29f95e8e5fb7bea0fad6aa3ff76ba679821bf4517d01173cf5b77cdb1c7c947c1404face3bcf948c1c9befed3a175aff6494eaec WHIRLPOOL 91721ae435f6820e9c71166b9e301c33b591d62bb27a35111c383a0ba2128a1767d9b3b1d8f80604f349f6efcad48fadbc0646b0f9176f96f420177149298f0a
+MISC metadata.xml 562 SHA256 cc75b20f2f189f802ec449a1a8aa9efdc4965e7d16f2f235726d3bf8426f8a35 SHA512 1d0229fe9efe42782da5259765f8867e5e52e743db65306b928dbbc0ab34d522e8292f3469d758e8506265e24f39218cf0c18e3afae1f579726e7308e039dc3c WHIRLPOOL f4de54770c9c771a57269b75f4e5b84518094128b126ec40f078562eb3eed1018d1dc421b248213a5e0d74f93cab20cabaf571a5b246370e4f1ed9c49c40912d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUQD1QXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcSCsQAJMyjLYm8r9Z8vp3KvUnPvPB
-sPu15/vdR8Mx4yLIJvk0Qs1ApadZ1TfvJ1Y2fLQg2aMxeWoFSRnMEDvV9q3i1uO7
-kvMBGcGT2G+netVNtIPBUU84ta0Yv+Sxk3Q8fZBcSCsK3nnsg5ICqMRlPtQogWto
-/cNp+5UHLMhi7HK5Qzd4eetAdZAoa0uH7B1PrMv/BfNHaD4bHj3c0AHjX4Ydtvif
-Rllju5hnsFp3m7K+vOcvlKaIjgSF3PfFe399CdHRkVmap8wUNfllQydNKUjlyR2j
-q+zTPa2yjSq/2GhwW3eW6sl2ewdi5J/fW+hkn5n3XTuZIBvwLpVRuyYvGQ6mlL5u
-gyXzKJaO59rJ4W56ruaMu8ouYnc0x0EPt3/nzWnui5g4FUweSqKNfsN5yq+oPASC
-2MFmCWn+e5XZ0SzOuB6ZSPhPmtHOU/+ECeWIAQLxPqtchNe2N1PqtZUkFUKnTDfL
-hNpXxYLKM/BJaLt9QAJdVUvs2r1SIraYqI6+HM4i370WPQ0eVHk1srbJfXNFOdWT
-rOaTleSO1XBPlP+XK3sfooAONMC7BjEe4TIfkGho/bjTr8gMsDbdpHL7yXbhhGFY
-v9Xm4uxqSutXyEzzQ9dxrJo7c55hHsDBtRnWwCp4QA0bmwin0egMA43nKG19VBZ6
-Ukkt6E/VOIfjU6uZUr6c
-=57NI
+iEYEAREIAAYFAlTfCVAACgkQVWmRsqeSphPMcgCfWTCBlRzMxjfbZU9Lqn3njCsu
+PDQAn0vocAzkImHv0jzWv0x1dXF/R+eJ
+=l+TK
 -----END PGP SIGNATURE-----
