@@ -5,9 +5,6 @@
 <email>prometheanfire@gentoo.org</email>
 <name>Matthew Thode</name>
 </maintainer>
-<longdescription lang="en">
-Distributed, general purpose, network monitoring engine.
-</longdescription>
 	<use>
 		<flag name="classicui">Adds support for the old interface</flag>
 		<flag name="nano-syntax">Adds support for syntax used in the nano editor</flag>
